--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>TÍTULO PRINCIPAL</h1>
+    <h1>titulo principal</h1>
+    <p>paragrafo 1</p>
+    <p>paragrafo 2</p>
 </body>
 </html>
