--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>titulo principal</h1>
-    <p>paragrafo 1</p>
-    <p>paragrafo 2</p>
+    <h1>título principal ESCOLHER E COLOCAR AQUI O TEMA DO SEU SITE</h1>
+    <p>parágrafo 1 COMEÇAR A DESCREVER O CONTEÚDO DO SEU SITE</p>
+    <p>parágrafo 2 PARA CADA PARÁGRAFO, ABRIR UM MARCADOR P E FECHAR ELE</p>
+    <p>parágrafo 3</p>
 </body>
 </html>
