--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <h1>título principal ESCOLHER E COLOCAR AQUI O TEMA DO SEU SITE</h1>
     <p>parágrafo 1 COMEÇAR A DESCREVER O CONTEÚDO DO SEU SITE</p>
     <p>parágrafo 2 PARA CADA PARÁGRAFO, ABRIR UM MARCADOR P E FECHAR ELE</p>
-    <p>parágrafo 3</p>
+    <p>parágrafo 3 mínimo</p>
 </body>
 </html>
