--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>título principal ESCOLHER E COLOCAR AQUI O TEMA DO SEU SITE</h1>
-    <p>parágrafo 1 COMEÇAR A DESCREVER O CONTEÚDO DO SEU <stron>SITE</strong></p>
+    <p>parágrafo 1 COMEÇAR A DESCREVER O CONTEÚDO DO SEU <strong>SITE</strong></p>
     <p>parágrafo 2 PARA CADA PARÁGRAFO, ABRIR UM MARCADOR P E FECHAR ELE</p>
     <p>parágrafo 3 mínimo</p>
 </body>
