--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <p>parágrafo 2 PARA CADA PARÁGRAFO, ABRIR UM MARCADOR P E FECHAR ELE</p>
     <p>parágrafo 3 mínimo</p>
     <ul>
-        <h2>lista</h2>
+        <h2> subtítulo que é a lista</h2>
         <li>item 1 </li>
         <li>item 2 </li>
         <li>item 3 </li>
