--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>título principal ABELHA ESCOLHER E COLOCAR AQUI O TEMA DO SEU SITE</h1>
+    <h1>título principal ESCOLHER E COLOCAR AQUI O TEMA DO SEU SITE</h1>
     <p>parágrafo 1 COMEÇAR A DESCREVER O CONTEÚDO DO SEU <strong>SITE palavra em negrito LEMBRAR DE ABRIR E FECHAR ESTE MARCADOR</strong></p>
     <p>parágrafo 2 PARA CADA PARÁGRAFO, ABRIR UM MARCADOR P E FECHAR ELE</p>
     <p>parágrafo 3 mínimo</p>
