--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <a href="link do que você quiser"> LINK </a>
+        <a href="link filme"> FILME ERAS TOUR </a>
+    </header>
     <h1>título principal ESCOLHER COLOCAR AQUI O TEMA DO SEU SITE</h1>
     <p>parágrafo 1 COMEÇAR A DESCREVER O CONTEÚDO DO SEU <strong>SITE palavra em negrito LEMBRAR DE ABRIR E FECHAR ESTE MARCADOR</strong></p>
     <p>parágrafo 2 PARA CADA PARÁGRAFO, ABRIR UM MARCADOR P E FECHAR ELE</p>
