--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
     <h1>título principal ESCOLHER COLOCAR AQUI O TEMA DO SEU SITE</h1>
     <p>parágrafo 1 COMEÇAR A DESCREVER O CONTEÚDO DO SEU <strong>SITE palavra em negrito LEMBRAR DE ABRIR E FECHAR ESTE MARCADOR</strong></p>
     <p>parágrafo 2 PARA CADA PARÁGRAFO, ABRIR UM MARCADOR P E FECHAR ELE</p>
+    <h2> SUBTÍTULO</h2>
     <p>parágrafo 3 MÍNIMO</p>
    <img src="taylor-swift-the-eras-tour-taylors-version-estreia-no-disney-nesta-quinta-feira-1710346056049_v2_900x506.png">
     <ol>
-        <h2> subtítulo que é a lista</h2>
+        <h3> TERCEIRO TÍTULO (DA LISTA)</h3>
         <li>item 1 </li>
         <li>item 2 </li>
         <li>item 3 </li>
