--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <a href="https://www.disneyplus.com/pt-br/movies/taylor-swift-the-eras-tour-taylors-version/OHLx94HKtS6X"> FILME ERAS TOUR </a>
         <a href="https://www.youtube.com/watch?v=VuNIsY6JdUw"> BELONG WITH ME </a>
     </header>
-    <h1>título principal ESCOLHER COLOCAR AQUI O TEMA DO SEU SITE</h1>
-    <p>parágrafo 1 COMEÇAR A DESCREVER O CONTEÚDO DO SEU <strong>SITE palavra em negrito LEMBRAR DE ABRIR E FECHAR ESTE MARCADOR</strong></p>
-    <p>parágrafo 2 PARA CADA PARÁGRAFO, ABRIR UM MARCADOR P E FECHAR ELE</p>
+    <h1>TAYLOR SWIFT</h1>
+    <p> Taylor Alison Swift (Reading, 13 de dezembro de 1989) é uma cantora, compositora, atriz, dançarina, diretora e roteirista americana. Suas composições narrativas, muitas vezes inspiradas pelas suas experiências pessoais, <strong>têm recebido ampla cobertura mediática e elogios de críticos</strong>.</p>
+    <p>Swift mudou-se para Nashville aos 14 anos de idade para se tornar uma cantora de música country, assinando um contrato de composição com a Sony/ATV Music Publishing em 2004 e um contrato de gravação com a Big Machine Records em 2005 e com a Universal Music em 2019.</p>
     <h2> SUBTÍTULO</h2>
     <p>parágrafo 3 MÍNIMO</p>
    <img src="taylor-swift-the-eras-tour-taylors-version-estreia-no-disney-nesta-quinta-feira-1710346056049_v2_900x506.png">
