--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <header>
         <a href="link do que você quiser"> LINK </a>
         <a href="https://www.disneyplus.com/pt-br/movies/taylor-swift-the-eras-tour-taylors-version/OHLx94HKtS6X"> FILME ERAS TOUR </a>
-        <a href="https://www.youtube.com/watch?v=VuNIsY6JdUw"> BELONG WITH ME </a>
+        <a href="https://www.youtube.com/watch?v=VuNIsY6JdUw"> BELONG WITH ME
     </header>
     <h1>TAYLOR SWIFT</h1>
     <p> Taylor Alison Swift (Reading, 13 de dezembro de 1989) é uma cantora, compositora, atriz, dançarina, diretora e roteirista americana. Suas composições narrativas, muitas vezes inspiradas pelas suas experiências pessoais, <strong>têm recebido ampla cobertura mediática e elogios de críticos</strong>.</p>
