--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <a href="https://www.youtube.com/watch?v=VuNIsY6JdUw"> BELONG WITH ME </a>
     </header>
     <h1>TAYLOR SWIFT</h1>
-    <p> Taylor Alison Swift (Reading, 13 de dezembro de 1989) é uma cantora, compositora, atriz, dançarina, diretora e roteirista americana. Suas composições narrativas, muitas vezes inspiradas pelas suas experiências pessoais, <strong>têm recebido ampla cobertura mediática e elogios de críticos</strong>.</p>
+    <p> Taylor Alison Swift (Reading, 13 de dezembro de 1989) é uma cantora, compositora, atriz, dançarina, diretora e roteirista americana. Suas composições narrativas, muitas vezes inspiradas pelas suas experiências pessoais, <strong>têm recebido ampla cobertura midiática e elogios de críticos</strong>.</p>
     <p>Swift mudou-se para Nashville aos 14 anos de idade para se tornar uma cantora de música country, assinando um contrato de composição com a Sony/ATV Music Publishing em 2004 e um contrato de gravação com a Big Machine Records em 2005 e com a Universal Music em 2019.</p>
     <h2> ÁLBUNS</h2>
     <p>parágrafo 3 MÍNIMO</p>
