--- a/index.html
+++ b/index.html
@@ -15,14 +15,22 @@
     <h1>TAYLOR SWIFT</h1>
     <p> Taylor Alison Swift (Reading, 13 de dezembro de 1989) é uma cantora, compositora, atriz, dançarina, diretora e roteirista americana. Suas composições narrativas, muitas vezes inspiradas pelas suas experiências pessoais, <strong>têm recebido ampla cobertura midiática e elogios de críticos</strong>.</p>
     <p>Swift mudou-se para Nashville aos 14 anos de idade para se tornar uma cantora de música country, assinando um contrato de composição com a Sony/ATV Music Publishing em 2004 e um contrato de gravação com a Big Machine Records em 2005 e com a Universal Music em 2019.</p>
-    <h2> ÁLBUNS</h2>
-    <p>parágrafo 3 MÍNIMO</p>
+    <h2> DIFERENTES ERAS </h2>
+    <p> Taylor Swfit possui diferentes Eras para cada um de seus álbuns, sendo cada uma delas</p>
    <img src="taylor-swift-the-eras-tour-taylors-version-estreia-no-disney-nesta-quinta-feira-1710346056049_v2_900x506.png">
     <ol>
-        <h3> TERCEIRO TÍTULO (DA LISTA)</h3>
-        <li>item 1 </li>
-        <li>item 2 </li>
-        <li>item 3 </li>
+        <h3> ÁLBUNS </h3>
+        <li> TAYLOR SWIFT </li>
+        <li> FEARLESS </li>
+        <li> SPEAK NOW </li>
+        <li>RED </li>
+        <li> 1989 </li>
+        <li> REPUTATION </li>
+        <li> LOVER </li>
+        <li> FOLKLORE</li>
+        <li> EVERMORE </li>
+        <li> MIDNIGHTS</li>
+        <li> THE TORTURED POETS DEPARTMENT </li>
     </ol>
 </body>
 </html>
