--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <p> Taylor Alison Swift (Reading, 13 de dezembro de 1989) é uma cantora, compositora, atriz, dançarina, diretora e roteirista americana. Suas composições narrativas, muitas vezes inspiradas pelas suas experiências pessoais, <strong>têm recebido ampla cobertura midiática e elogios de críticos</strong>.</p>
     <p>Swift mudou-se para Nashville aos 14 anos de idade para se tornar uma cantora de música country, assinando um contrato de composição com a Sony/ATV Music Publishing em 2004 e um contrato de gravação com a Big Machine Records em 2005 e com a Universal Music em 2019.</p>
     <h2> DIFERENTES ERAS </h2>
-    <p> Taylor Swfit possui diferentes Eras para cada um de seus álbuns, sendo cada uma delas</p>
+    <p> Taylor Swfit possui diferentes Eras para cada um de seus álbuns, sendo cada uma delas uma fase diferente de sua vida. Os álbuns acompanham então seu amadurecimento pessoal e como ele refletiu em suas composições. Para seu fã clube, justamente por esse motivo, os álbuns possuem um significado tão especial, pois da mesma forma que eles acompanharam a evolução da artista, eles também acompanharam seus fãs conforme os anos foram passando.</p>
    <img src="taylor-swift-the-eras-tour-taylors-version-estreia-no-disney-nesta-quinta-feira-1710346056049_v2_900x506.png">
     <ol>
         <h3> ÁLBUNS </h3>
