--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <p>Swift mudou-se para Nashville aos 14 anos de idade para se tornar uma cantora de música country, assinando um contrato de composição com a Sony/ATV Music Publishing em 2004 e um contrato de gravação com a Big Machine Records em 2005 e com a Universal Music em 2019.</p>
     <h2> DIFERENTES ERAS </h2>
     <p> Taylor Swfit possui diferentes Eras para cada um de seus álbuns, sendo cada uma delas uma fase diferente de sua vida. Os álbuns acompanham então seu amadurecimento pessoal e como ele refletiu em suas composições. Para seu fã clube, justamente por esse motivo, os álbuns possuem um significado tão especial, pois da mesma forma que eles acompanharam a evolução da artista, eles também acompanharam seus fãs conforme os anos foram passando.</p>
-   <img src="taylor-swift-the-eras-tour-taylors-version-estreia-no-disney-nesta-quinta-feira-1710346056049_v2_900x506.png">
+   <img class="img1" src="taylor-swift-the-eras-tour-taylors-version-estreia-no-disney-nesta-quinta-feira-1710346056049_v2_900x506.png">
     <ol>
         <h3> ÁLBUNS </h3>
         <li> TAYLOR SWIFT </li>
