--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css"> 
 </head>
 <body>
+    <div class="centro">
     <header>
         <a href="https://www.w3schools.com/"> LINK APOIO ESTUDO </a>
         <a href="https://www.disneyplus.com/pt-br/movies/taylor-swift-the-eras-tour-taylors-version/OHLx94HKtS6X"> FILME ERAS TOUR </a>
@@ -18,7 +19,8 @@
     <h2> DIFERENTES ERAS </h2>
     <p> Taylor Swfit possui diferentes Eras para cada um de seus álbuns, sendo cada uma delas uma fase diferente de sua vida. Os álbuns acompanham então seu amadurecimento pessoal e como ele refletiu em suas composições. Para seu fã clube, justamente por esse motivo, os álbuns possuem um significado tão especial, pois da mesma forma que eles acompanharam a evolução da artista, eles também acompanharam seus fãs conforme os anos foram passando.</p>
    <img class="img1" src="taylor-swift-the-eras-tour-taylors-version-estreia-no-disney-nesta-quinta-feira-1710346056049_v2_900x506.png">
-    <ol>
+   </div>
+    <ul>
         <h3> ÁLBUNS </h3>
         <li> TAYLOR SWIFT </li>
         <li> FEARLESS </li>
@@ -31,6 +33,6 @@
         <li> EVERMORE </li>
         <li> MIDNIGHTS</li>
         <li> THE TORTURED POETS DEPARTMENT </li>
-    </ol>
+    </ul>
 </body>
 </html>
